# CPP_Euchre

./: CMakeLists.txt  gtest.cmake
src/: Dealer.cpp  Dealer.h  Player.cpp  Player.h  Test.cpp  main  main.cpp  testlib-test
week2/: CMakeLists.txt
week2/src/: Dealer.cpp  Dealer.h  Deck.cpp  Deck.h  Player.cpp  Player.h  main  main.cpp
